# openclaw-molt-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  glama.json  justfile  llms.txt  manifest.json  mcpb.json  pyproject.toml  restart.bat  start.ps1  start.ps1.bak.20260508_202351  stop.bat
_llm_test_scripts/: debug_settings.py
docs/: ARCHITECTURE.md  COMMUNITY_ROADMAP.md  INSTALL_VIRTUALBOX.md  README_CLAWD_MCP_TOOLS.md  README_INDEX.md  README_MOLTBOOK.md  README_OPENCLAW.md  README_WEBAPP.md  README_openclaw_molt_mcp_TOOLS.md  SECURITY_HARDENING.md
docs/integrations/: BASTIO_INTEGRATION.md  LLAMAFIREWALL_INTEGRATION.md  TRYLON_INTEGRATION.md
mcpb/: README.md  manifest.json
mcpb/assets/prompts/: configuration.md  examples.json  quick-start.md  system.md  troubleshooting.md  user.md
scripts/: check.ps1  install.bat  install.ps1  mcpb-build.ps1  serve_logs.ps1  serve_logs.py  start.bat  start.ps1  start.ps1.bak.20260508_202351
scripts/scripts/: FleetStartMode.ps1
snippets/: README.md  mcp-config-clawd-mcp.json  mcp-config-openclaw-molt-mcp.json
src/clawd_mcp/: __init__.py  __main__.py  config.py  gateway_client.py  logging_config.py  mcp_instance.py  moltbook_client.py  serve_logs.py  server.py
src/clawd_mcp/tools/: __init__.py  agent.py  channels.py  gateway.py  moltbook.py  routing.py  security.py  sessions.py  skills.py
src/openclaw_mcp/: gateway_client.py
src/openclaw_mcp/tools/: agent.py
src/openclaw_molt_mcp/: __init__.py  __main__.py  config.py  gateway_client.py  logging_config.py  mcp_instance.py  moltbook_client.py  serve_logs.py  server.py  transport.py
src/openclaw_molt_mcp/tools/: __init__.py  agent.py  bastion.py  channels.py  gateway.py  moltbook.py  openclaw_remove.py  routing.py  security.py  sessions.py  skills.py  voice.py
tests/: __init__.py  conftest.py  test_agent.py  test_channels.py  test_config.py  test_gateway_client.py  test_gateway_tool.py  test_routing.py  test_security.py  test_server.py  test_sessions.py  test_skills.py
web_sota/: index.html  package-lock.json  package.json  start.ps1  start.ps1.bak.20260508_202351  stop.ps1  vite.config.ts
web_sota/src/: App.tsx
web_sota/src/components/layout/: sidebar.tsx
web_sota/src/pages/: dashboard.tsx  settings.tsx
webapp/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
webapp/src/: App.tsx  main.tsx
webapp/src/components/: Layout.tsx  LogBootstrap.tsx  OpenClawInstallBanner.tsx  Sidebar.tsx  Topbar.tsx
webapp/src/components/modals/: AuthModal.tsx  HelpModal.tsx  LoggerModal.tsx
webapp/src/context/: LogContext.tsx
webapp/src/pages/: AI.tsx  Channels.tsx  Clawnews.tsx  Dashboard.tsx  Diagram.tsx  Health.tsx  Integrations.tsx  Moltbook.tsx  Onboarding.tsx  Routes.tsx  Security.tsx  Sessions.tsx  Settings.tsx  Skills.tsx  StarterPage.tsx  Startpage.tsx  Statistics.tsx
webapp/src/services/: api.ts
webapp/src/styles/: main.css
webapp_api/: README.md  landing_page_service.py  main.py  mcp_config_insert.py  ollama_client.py  ollama_preprompt.txt
webapp_api/landing_assets/: script.js  styles.css
